Add put endpoint for update user
