# src/Controllers/user.ts
@@ -1,5 +1,5 @@
-import { Body, Patch, Post, Route, Tags } from "tsoa";
-import { IUserRegister } from "../Models/types";
+import { Body, Post, Put, Route, Tags } from "tsoa";
+import { IUserProfileUpdate, IUserRegister } from "../Models/types";
 const UserService = require("../Services/UserService");
 const config = require("config");
 const jwt = require("jsonwebtoken");
@@ -11,6 +11,7 @@ interface IUserResponse {
     name: string;
     email: string;
     isProvider: boolean;
+    profilePicture?: string;
   };
 }
 
@@ -55,6 +56,42 @@ export default class UserController {
     return { code: user.code, payload: user.payload };
   }
 
-  @Patch("/")
-  public async updateProfile() {}
+  /**
+   * Update a new user.
+   * @param name The user name.
+   * @param email The user email.
+   * @param password The user password.
+   * @param isProvider Represents if the user is a provider or Not.
+   * @param profilePicture User Profile Picture.
+   * @returns The user data.
+   */
+  @Put("/")
+  public async update(
+    @Body() { email, name, password, profilePicture }: IUserProfileUpdate
+  ): Promise<IUserResponse> {
+    const user = await UserService.UpdateUser({
+      email,
+      name,
+      password,
+      profilePicture,
+    });
+    if (user.code === 200) {
+      const token = await new Promise<string | undefined>((resolve, reject) => {
+        jwt.sign(
+          user.payload,
+          config.get("jwtSecret"),
+          { expiresIn: 3600 },
+          (err: any, token: string | undefined) => {
+            if (err) {
+              reject(err);
+            } else {
+              resolve(token);
+            }
+          }
+        );
+      });
+      user.payload.token = token;
+    }
+    return { code: user.code, payload: user.payload };
+  }
 }
